Post cherrypick Java 8 / 1.16 fixes.